feat: repository example
